2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* counter.tcl: Fixed dubious code reported by frink.

2000-10-04  Brent Welch <welch@ajubasolutions.com>

	* counter.tcl: Fixed bug in counter::MergeDay

2000-10-03  Brent Welch <welch@ajubasolutions.com>

	* counter.tcl: Fixed bug in label format for daily graph.

2000-10-02  Brent Welch <welch@ajubasolutions.com>

	* NAME CHANGE from "stats" to "counter"
	* counter.tcl: Changed shading of histogram labels.

2000-10-02  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Added stats::htmlHistDisplayRow
	so that the calling page could define the overall table structure.

2000-10-01  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Fixed calculation of hourBase
	and minuteBase when secsPerMinute was not 60.

2000-09-23  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Time-based histograms were
	not displaying the 23rd hour nor the 59th minute.

2000-09-22  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Fixed initialization when the
	server starts in the 59'th minute.  The first after event
	was an hour too long, so the first hour of data didn't
	display correctly.

2000-09-21  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Added time labels and tick
	marks to all the time-based histograms.
	Fixed alignment of per-minute and per-hour histograms.

2000-09-20  Brent Welch <welch@ajubasolutions.com>

	* modules/stats/stats.tcl: Refined the countGet routine to return things
	needed by the TclHttpd status module.  Refined the value-based histogram display.
	* modules/stats/stats.tests: Added more tests.
	* modules/stats/stats.n: Completed the man page.

2000-09-15  Brent Welch <welch@ajubasolutions.com>

	* Created this module.
