@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: counter.test,v 1.2 2000/10/04 20:01:47 welch Exp $
+# RCS: @(#) $Id: counter.test,v 1.3 2001/07/09 17:20:38 welch Exp $
 
 package require tcltest
 namespace import -force ::tcltest::*
@@ -150,7 +150,7 @@ test counter-hist10x {counter::count} {
 } {0 1 1 7 2 2 3 1 6 1}
 
 test counter-histlog {counter::count} {
-    counter::init histlog -histlog 10
+    counter::init histlog -histlog 1
     counter::count histlog 0.1
     counter::count histlog 0.5
     counter::count histlog 0.9
@@ -166,7 +166,7 @@ test counter-histlog {counter::count} {
     counter::count histlog 500
     counter::count histlog 1000
     counter::get histlog -hist
-} {0 1 1 7 2 2 3 1 6 1}
+} {-2 1 0 4 1 2 2 1 3 2 4 1 5 1 6 2}
 
 test counter-timehist {counter::count} {
     counter::init hits -timehist 4
@@ -194,9 +194,10 @@ test counter-countNames {counter::names} {
     counter::init avg
     counter::init lastn -lastn 4
     counter::init hist -hist 10
+    counter::init histlog -histlog 1
     counter::init hits -timehist 4
     lsort [counter::names]
-} {avg hist hits lastn simple}
+} {avg hist histlog hits lastn simple}
 
 test counter-countExists {counter::exists} {
     counter::init simple
